# emd-gaf-hal

./: .gitignore  CMakeLists.txt  build.sh
app/: edmp_gaf.c  frontend.h  frontend_uart.c  invn_mag_ict1531x.c  linux_main.c
demo/: emd-gaf.c
example/: read_sensor.c
hal/: emd_hal.c  emd_hal.h
inc/: emd_gaf.h  emd_gaf_types.h
src/: emd_gaf.c  frontend.h
src/hal/: emd_hal.h  system_interface.h
